Information of plugins on forums.x-plane.org can be saved in a popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,6 +7,12 @@
 		<script defer type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-		<p>test</p>
+		<div id="header">
+			<button class="button" id="addButton"><img src="../icons/add.svg"></button>
+			<button class="button"><img src="../icons/edit.svg"></button>
+		</div>
+		<div id="main">
+				
+		</div>
 	</body>
 </html>
