Saved plugins can now be deleted

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,8 @@
 	<body>
 		<div id="header">
 			<button class="button" id="addButton"><img src="../icons/add.svg"></button>
-			<button class="button"><img src="../icons/edit.svg"></button>
+			<button class="button" id="refreshButton"><img src="../icons/refresh.svg"></button>
+			<button class="button" id="editButton"><img id="editImg" src="../icons/edit.svg"></button>
 		</div>
 		<div id="main">
 				
