complete code rewritten, GUI changes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,11 +8,16 @@
 	</head>
 	<body>
 		<div id="header">
-			<button class="button" id="addButton"><img src="../icons/add.svg"></button>
+			<div id="headerLeft" class="headerDivs"></div>
+			<div id="editDiv" class="headerDivs headerButtons"><img class="headerImg" id="editImg" src="../icons/edit.svg"></div>
+			<div id="refreshDiv" class="headerDivs headerButtons"><img class="headerImg" src="../icons/refresh.svg"></div>
+			<div id="addDiv" class="headerDivs headerButtons"><img class="headerImg"  src="../icons/add.svg"></div>
+<!-- 			<button class="button" id="addButton"><img src="../icons/add.svg"></button>
 			<button class="button" id="refreshButton"><img src="../icons/refresh.svg"></button>
-			<button class="button" id="editButton"><img id="editImg" src="../icons/edit.svg"></button>
+			<button class="button" id="editButton"><img id="editImg" src="../icons/edit.svg"></button> -->
 		</div>
-		<div id="main">		
+		<div id="main">	
 		</div>
+		<div id="snackbar"></div>
 	</body>
 </html>
