--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,13 +8,10 @@
 	</head>
 	<body>
 		<div id="header">
-			<div id="headerLeft" class="headerDivs"></div>
+			<div id="headerLeft" class="headerDivs" style="color:#fff">v.0.6.0</div>
 			<div id="editDiv" class="headerDivs headerButtons"><img class="headerImg" id="editImg" src="../icons/edit.svg"></div>
 			<div id="refreshDiv" class="headerDivs headerButtons"><img class="headerImg" src="../icons/refresh.svg"></div>
 			<div id="addDiv" class="headerDivs headerButtons"><img class="headerImg"  src="../icons/add.svg"></div>
-<!-- 			<button class="button" id="addButton"><img src="../icons/add.svg"></button>
-			<button class="button" id="refreshButton"><img src="../icons/refresh.svg"></button>
-			<button class="button" id="editButton"><img id="editImg" src="../icons/edit.svg"></button> -->
 		</div>
 		<div id="main">	
 		</div>
