--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<div id="headerLeft" class="headerDivs" style="color:#fff">v.0.6.0</div>
+			<div id="headerLeft" class="headerDivs"><input id="inputField" type="" name="" placeholder="Search your plugins..."></div>
 			<div id="editDiv" class="headerDivs headerButtons"><img class="headerImg" id="editImg" src="../icons/edit.svg"></div>
 			<div id="refreshDiv" class="headerDivs headerButtons"><img class="headerImg" src="../icons/refresh.svg"></div>
 			<div id="addDiv" class="headerDivs headerButtons"><img class="headerImg"  src="../icons/add.svg"></div>
