add loading indicator when adding plugins, bug fixes & code improvements

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="header">
 			<div id="headerLeft" class="headerDivs"><input id="inputField" type="" name="" placeholder="Search your plugins..."></div>
-			<div id="editDiv" class="headerDivs headerButtons"><img class="headerImg" id="editImg" src="../icons/edit.svg"></div>
+			<div id="editDiv" class="headerDivs headerButtons"><img class="headerImg" id="editImg" src="../icons/pen.svg"></div>
 			<div id="refreshDiv" class="headerDivs headerButtons"><img class="headerImg" src="../icons/refresh.svg"></div>
 			<div id="addDiv" class="headerDivs headerButtons"><img class="headerImg"  src="../icons/add.svg"></div>
 		</div>
